<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="enter_name">Enter name</string>
    <string name="time">Time</string>
    <string name="Go">GO</string>
    <string name="save">Save</string>
</resources>