<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NotesList">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cardView"
            android:layout_margin="5dp"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/name"
                    android:hint="@string/enter_name"
                    android:padding="5dp"
                    android:textSize="20sp"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/notes"
                    android:hint="@string/enter_notes"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/time"
                    android:hint="@string/time"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/saveBtn"
                    android:layout_marginHorizontal="80dp"
                    android:text="@string/save"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/goBtn"
                    android:layout_marginHorizontal="80dp"
                    android:text="@string/Go"
                    android:textSize="20sp"
                    android:layout_marginTop="10dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

</RelativeLayout>